# musicalkey

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  README.MD  README.md  addon.node  babel.config.js  cleanup.js  global.d.ts  index.js  output.txt  package-lock.json  package.json  postcss.config.js  postcss.config.ts  tailwind.config.js  tsconfig.json
.erb/configs/: test.loader.js  webpack.config.base.js  webpack.config.base.ts  webpack.config.eslint.js  webpack.config.main.prod.babel.js  webpack.config.main.prod.ts  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.babel.js  webpack.config.renderer.prod.ts
.erb/dll/: renderer.dev.dll.js  renderer.json
assets/styles/: __app.global.scss  _app.global.scss  sidebar.style.scss  sidebar.style.scss.d.ts
audio-data/: 000055.ldb  000057.ldb  LOG  LOG.old  MANIFEST-000056
audio-database/: LOG
audio-processor/: CMakeLists.txt  addon.d.ts  index.js  package.json  post-build.js
audio-processor/src/: AudioAnalyzer.cpp  AudioAnalyzerAddon.cpp  AudioAnalyzerAddon.h  AudioAnalyzerWrapper.cpp  AudioAnalyzerWrapper.h
release/app/: package-lock.json  package.json
release/app/audio-processor/: package.json  post-build.js
release/app/audio-processor/src/: AudioAnalyzer.h  AudioAnalyzerAddon.cpp
src/: AudioAnalyzer.cpp  AudioAnalyzer.h  HelloWorld.cpp  HelloWorld.h  constants.ts  index.html  index.tsx  mockdata.ts  package.json
src/__tests__/: App.test.tsx
src/main/: main.dev.ts  main.ts  store.ts
src/main/databases/: local.database.ts
src/main/ipc/: database-ipc.ts  ipc.ts  processAudio.ts  updateMainStore.ts
src/main/types/: database.type.ts
src/renderer/: App.tsx  global.d.ts  index.ejs  index.tsx
src/renderer/components/: base-layout.component.tsx  error-modal.component.tsx
src/renderer/components/audio-collection/: audio-collection.component.tsx  table.component.tsx
src/renderer/components/footer/: footer.component.tsx
src/renderer/components/footer/audio-control/: audio-control.component.tsx
src/renderer/components/footer/audio-control/button/: back-audio-button.component.tsx  pause-audio-button.component.tsx  play-audio-button.component.tsx  skip-audio-button.component.tsx
src/renderer/components/footer/now-playing-info/: now-playing-info.component.tsx
src/renderer/components/footer/waveform/: waveform.component.tsx
src/renderer/components/public/: base-layout.component.tsx  waveform.component.tsx
src/renderer/components/public/sidebar/: sidebar.component.tsx
src/renderer/components/public/sidebar/filter/: bpmfilter.component.tsx  filter.component.tsx  key-filter.component.tsx  searchbar.component.tsx  semitone-filter.component.tsx
src/renderer/components/sidebar/: sidebar.component.tsx
src/renderer/components/sidebar/filter/: bpmfilter.component.tsx  filter.component.tsx  key-filter.component.tsx  searchbar.component.tsx  semitone-filter.component.tsx
src/renderer/components/sidebar/playlist/: playlist.component.tsx
src/renderer/hooks/: useSize.hook.ts
src/renderer/interfaces/: audio.interface.ts
src/renderer/store/: store.ts
src/renderer/store/audio-data/: fetch-data.slice.ts  filter.slice.ts
src/renderer/store/now-playing/: now-playing.slice.ts
src/renderer/views/: home.view.tsx
src/renderer/views/public/: home.view.tsx
src/utils/: makeDBData.ts
